Fix viewport zooming on mobile safari

--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: #e5e5e5;
+  overflow: scroll;
+  touch-action: pan-y, pan-x;
 }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
